# ezkl-ios-rust-porter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  update-bindings.yml
SwiftBindings/: ios_ezkl.swift  ios_ezklFFI.h
src/: error.rs  gen_witness.rs  lib.rs  prove.rs  serialization.rs  util.rs  verify.rs
tests/: integration_test.rs
tests/ezkl-sample/: settings.json
